# RecordReplayLibrary

./: .gitignore  CMakeLists.txt  README.md  TODO.md
apps/viewer/: App.cpp  App.hpp  AppContext.hpp  CMakeLists.txt  SessionLoader.cpp  SessionLoader.hpp  main.cpp
apps/viewer/panels/: AnnotationsPanel.cpp  AnnotationsPanel.hpp  ChannelListPanel.cpp  ChannelListPanel.hpp  IPanel.hpp  MessageInspectorPanel.cpp  MessageInspectorPanel.hpp  SessionInfoPanel.cpp  SessionInfoPanel.hpp  TimelinePanel.cpp  TimelinePanel.hpp
apps/viewer/util/: FormatUtil.hpp  HexView.hpp  SchemaInspector.hpp  VideoTexture.cpp  VideoTexture.hpp
cmake/: recplayConfig.cmake.in
docs/: README.md  architecture-gaps-and-roadmap.md  architecture-overview.md  build-and-test-architecture.md  core-library-architecture.md  data-format-architecture.md  runtime-flow-architecture.md  viewer-and-examples-architecture.md
examples/: CMakeLists.txt
examples/record_ffmpeg/: CMakeLists.txt  main.cpp
examples/record_multi_pattern/: CMakeLists.txt  main.cpp
examples/record_net_streams/: CMakeLists.txt  main.cpp
examples/replay_ffplay/: CMakeLists.txt  main.cpp
include/recplay/: channel.hpp  export.hpp  format.hpp  reader.hpp  recplay.hpp  session.hpp  splitter.hpp  types.hpp  writer.hpp
src/: CMakeLists.txt  reader.cpp  session.cpp  splitter.cpp  version.cpp  writer.cpp
src/detail/: chunk_accumulator.cpp  chunk_accumulator.hpp  crc32.cpp  crc32.hpp  file_map.cpp  file_map.hpp  index_builder.cpp  index_builder.hpp  manifest_io.cpp  manifest_io.hpp  platform.hpp
tests/: CMakeLists.txt  test_channel.cpp  test_file_map.cpp  test_format.cpp  test_reader.cpp  test_roundtrip.cpp  test_session.cpp  test_splitter.cpp  test_writer.cpp
